--- a/public/register.html
+++ b/public/register.html
@@ -58,6 +58,7 @@
             <textarea id="address" name="address" rows="4" required></textarea>
 
             <button type="submit">Register</button>
+            <a href="/login">Login if you have account</a>
         </form>
     </div>
 </body>
